[project]
name = "pairwise-combat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "polars>=1.31.0",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"